# MWorld

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  TestTimings.txt  TestTimings2.txt  TestTimings2par2threads.txt  TestTimings2par4threads.txt  TestTimings2singlethreads.txt  TestTimings2threadsNoOctree.txt  TestTimings4threadsNoOctree.txt  TestTimings8threadsNoOctree.txt  TestTimingsFourthreadsNoBarnesHut.txt  TestTimingsSinglethreadsNoBarnesHut.txt  TestTimingsSinglethreadsNoOctree.txt  TestTimingsTwothreadsNoBarnesHut.txt  memoryrequired.txt  test.py  timings.txt
TestTimingResults/: TestTimings2par4threads.txt  TestTimings2singlethreads.txt  TestTimings2threadsNoOctree.txt  TestTimingsEightthreadsNoBarnesHut.txt
buildmake/: CMakeCache.txt  Makefile  cmake_install.cmake
buildmake/numerics/: Makefile  cmake_install.cmake
buildmake/numerics/linear_alg/: Makefile  cmake_install.cmake
buildmake/numerics/linear_alg/test/: Makefile  cmake_install.cmake
buildmake/numerics/quaternion/: Makefile  cmake_install.cmake
buildmake/numerics/quaternion/test/: Makefile  cmake_install.cmake
buildmake/simulation/: Makefile  cmake_install.cmake
buildmake/simulation/blocks/: Makefile  cmake_install.cmake
buildmake/simulation/environment/: Makefile  cmake_install.cmake
buildmake/simulation/octree/: Makefile  cmake_install.cmake
buildmake/simulation/world_handler/: Makefile  cmake_install.cmake
buildmake/utils/: Makefile  cmake_install.cmake
buildmake/utils/settings/: Makefile  cmake_install.cmake
buildmake/utils/util_functions/: Makefile  cmake_install.cmake
catch/: catch.hpp
lib/glad/: cmake_install.cmake
lib/glad/include/glad/: glad.h
lib/glfw-3.3.2/docs/: CONTRIBUTING.md  Doxyfile.in  build.dox  compat.dox  compile.dox
lib/glfw-3.3.2/docs/html/: bug.html  build_8dox.html  build_guide.html  compat_8dox.html  compat_guide.html  compile_8dox.html  compile_guide.html  context_8dox.html  context_guide.html  deprecated.html  dir_15a5176d7c9cc5c407ed4f611edf0684.html  dir_a58ef735c5cc5a9a31d321e1abe7c42e.html  dir_abae1f34c5d965773b98e3c915cdaeb5.html  files.html  glfw3_8h.html  (+46 more)
lib/glfw-3.3.2/examples/: boing.c
lib/glm/glm/: common.hpp  glm.hpp  packing.hpp  trigonometric.hpp  vector_relational.hpp
linearAlg/: Makefile
linearAlg/src/: matrix.h
linearAlg/test/: test.cpp
math/Quaternion/: quaternion.cpp  quaternion.h
math/linear-alg/src/: matrix.cpp  matrix.h
math/linearAlg/src/: matrix3.cpp  matrix3.h
numerics/: CMakeLists.txt
numerics/linear_alg/: CMakeLists.txt
numerics/linear_alg/include/: matrix.h  matrix.hpp  matrix3.h  matrix3.hpp
numerics/linear_alg/src/: matrix.cpp  matrix3.cpp
numerics/linear_alg/test/: CMakeLists.txt  test.cpp
numerics/quaternion/: CMakeLists.txt  cmake_install.cmake  test.cpp
numerics/quaternion/include/: quaternion.hpp
numerics/quaternion/src/: quaternion.cpp
numerics/quaternion/test/: CMakeLists.txt  test-main.cpp  test.cpp
octree/: CMakeLists.txt
prototype/: CMakeLists.txt
prototype/prototype_one/: CMakeLists.txt  cube.cpp  main.cpp
prototype/prototype_three/: CMakeLists.txt  cube.cpp  main.cpp
prototype/prototype_two/: CMakeLists.txt  cube.cpp  main.cpp
render/: CMakeLists.txt  CMakelists.txt  camera.hpp  cube_render.cpp  helpers.cpp  main.cpp  shader.hpp  vert.glsl  world_initializer.hpp
render/block_renderer/: CMakeLists.txt  block_renderer.cpp  block_renderer.hpp
render/camera/: CMakeLists.txt  camera.hpp
render/cube/: CMakeLists.txt  cube.cpp  cube.hpp  cube_collection.hpp
render/cube_renderer/: CMakeLists.txt  cube_renderer.cpp  cube_renderer.hpp
render/cubes_collection_render/: CMakeLists.txt  cubes_collection_render.cpp  cubes_collection_render.hpp
render/cubes_collection_renderer/: CMakeLists.txt
render/glsl_shaders/: frag.glsl  vert.glsl
render/lib/glad/: CMakeLists.txt
render/lib/glad/src/: glad.c
render/make-build/: CMakeCache.txt  Makefile  cmake_install.cmake
render/make-build/cube/: Makefile  cmake_install.cmake
render/make-build/cube/linear_alg/: Makefile
render/make-build/lib/glad/: Makefile
render/make-build/util_build/: Makefile
render/shader/: CMakeLists.txt  shader.hpp
render/shaders/: frag.glsl  vert.glsl
render/utils/: CMakeLists.txt  world_initializer.cpp  world_initializer.hpp  world_intiializer.cpp
results/execution_results/: TestTimings1threadsBothOctreeAndBH.txt  TestTimings2.txt  TestTimings2par2threads.txt  TestTimings2threadsBothOctreeAndBH.txt  TestTimings2threadsNoOctree.txt  TestTimings4threadsBothOctreeAndBH.txt  TestTimings4threadsNoOctree.txt  TestTimings8threadsBothOctreeAndBH.txt  TestTimings8threadsNoOctree.txt  TestTimingsEightthreadsNoBarnesHut.txt  TestTimingsFourthreadsNoBarnesHut.txt  TestTimingsSinglethreadsNoBarnesHut.txt  TestTimingsSinglethreadsNoOctree.txt  TestTimingsTwothreadsNoBarnesHut.txt  memoryRequiredRestructured.txt
results/integration_test_results/: barnes_hut_test.txt  collision_with_octree.txt
simulation/: CMakeLists.txt
simulation/blocks/: CMakeLists.txt  block.cpp  block.hpp  cube.cpp  cube.hpp  e_block.cpp  e_block.hpp  i_block.cpp  i_block.hpp  m_block.cpp  m_block.hpp  oldcube.cpp  z_block.cpp  z_block.hpp
simulation/environment/: CMakeLists.txt  amplifier.cpp  and_gate_test.cpp  barnes_hut_test.cpp  collision_tests.cpp  flare_test.cpp  logic_gates.cpp  not_gate_test.cpp  octree_test.cpp  or_gate_test.cpp  simulation.cpp  world_handler.cpp
simulation/octree/: CMakeLists.txt  collision_octree.cpp  collision_octree.hpp  force_octree.cpp  force_octree.hpp  octree.cpp  octree.hpp
simulation/tree_integration_tests/: CMakeLists.txt  barnes_hut_test.cpp  octree_test.cpp
simulation/world_handler/: CMakeLists.txt  world_handler.cpp  world_handler.hpp
test/: test.cpp
test_scripts/: barnes_hut_test_script.py  collision_octree_test_scripts.py  execution_time_test_script.py  memory_test_script.py
utils/: CMakeLists.txt  utils.cpp  utils.h
utils/settings/: CMakeLists.txt  settings.h  settings.hpp
utils/util_functions/: CMakeLists.txt  util_functions.cpp  util_functions.h
(+9 files in other folders)
